完成瓦片合并独立功能